# TVP-BLP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/data/: README.md
notebooks/: dev.ipynb
src/mypkg.egg-info/: PKG-INFO  SOURCES.txt
src/tvpblp/: __init__.py  tvblp.py  tvpblp.py  utils.py
src/tvpblp/data/: yoghurt_sample.csv
tests/: test_import.py
